the facet choices UI improvement to avoid jumpiness

--- a/src/assets/scss/_facet-choice-picker.scss
+++ b/src/assets/scss/_facet-choice-picker.scss
@@ -1,6 +1,8 @@
 .choice-picker {
   .picker-container {
     height: 100%;
+    display: flex;
+    flex-direction: column;
 
     .chaise-search-box {
       font-size: 1rem;
@@ -8,6 +10,7 @@
     }
 
     .button-container {
+      margin-top: auto;
       height: 20px;
 
       .retry-btn {
